src/styles/Main.css
main p{
  font-size: 30px;
  padding: 0 40px;
  font-family: Lato, sans-serif;
  color: white;
  letter-spacing: 1px;
  line-height: 50px;
  text-align: center;
}
h2{
  width: 100%;
  font-size: 50px;
  line-height: 90px;
  margin-bottom: 30px;
  background-color: #222;
  color: white;
  font-family: roboto, sans-serif;
  text-align: center
}
section{
  max-width: 1400px;
  margin: 0 auto;
}
.wrap{
  display: flex;
  flex-wrap: wrap;
}
.wrap div{
  width: 50%;
  text-align: center;
}
.wrap .wrapLeft img{
  width: 150px;
  height: 150px;
  margin: 20px 0;
  transition: 1s;
  transform: translateX(-100vw)
}
.wrap .wrapLeft img:nth-of-type(1){
  transition: 1s .3s;
}
.wrap .wrapLeft img:nth-of-type(2){
  transition: 1s .2s;
}
.wrap .wrapLeft img:nth-of-type(3){
  transition: 1s .1s;
}
.wrap .wrapLeft img.scroll{
  transform: translateX(0)
}
.wrap .wrapRight img{
  display: inline-block;
  width: 400px;
  margin-top: 20px;
  transform: translateX(100vw);
  transition: 1s;
}
.wrap .wrapRight img.scroll{
  transform: translateX(0);
}
.project{
  text-align: center;
  margin: 0 auto 30px;
}
.project h3 {
  text-align:center;
  font-size: 40px;
  padding-bottom: 30px;
  color: white;
  font-family: roboto, sans-serif;
}
.project p{
  float:left;
  width: 50%;
}
.project img{
  width: 40%;
}
.about .pictures{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  height: 800px;
  margin-top: 20px;
}
.about .pictures .item{
   position: relative;
  width: 47%;
  height: 42%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-size: 110%;
  transition: 1s;
}
.about .pictures .item:nth-of-type(even) {
  transform: translateX(100vw)
}
.about .pictures .item:nth-of-type(odd){
  transform: translateX(-100vw)
}
.about .pictures .item:nth-of-type(even).scroll,
.about .pictures .item:nth-of-type(odd).scroll{
  transform: translateX(0);
}
.about .pictures .item:hover{
  background-size: 120%;
}
.about .pictures .item p{
  opacity: 0;
  transition: 2s;
  position: absolute;
  font-family: roboto, sans-serif;
  background-color: rgba(0,0,0, .6);
  line-height: 60px;
  top: 50%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
}
.about .pictures .item:hover p{
  opacity:1;
}
.about .pictures .item:nth-of-type(1){
  background-image: url(../images/bjj.jpg);
}
.about .pictures .item:nth-of-type(2){
  background-image: url(../images/swimming.jpg);
}
 .about .pictures .item:nth-of-type(3){
   background-image: url(../images/running.jpg);
}
 .about .pictures .item:nth-of-type(4){
   background-image: url(../images/mountain.jpg);
}
.contact{
  display: flex;
  flex-wrap: wrap;
}
.contact p{
  flex-basis: 49%;
  color: #fff;
  margin: 10px 4px;
  
}

.contact p:hover{
  cursor: pointer;
  color: #999;
  
}
@media(max-width: 1400px){
  main p{
    font-size: 27px;
    padding: 0 20px;
  }
  .wrap{
    justify-content: center;
  }
  .wrap div{
    width: 80%;
    text-align: center;
    margin-bottom: 20px;
  }
  .project h3{
    font-size: 38px;
    line-height: 50px;
  }
}

@media(max-width: 1024px){
  main p{
    font-size: 24px;
    padding: 0 20px;
    color: white;
    line-height: 35px;
    text-align: center;
  }
  .wrap .wrapLeft img{
    width: 100px;
    height: 100px;
    margin: 20px 0;
  }
  .contact p{
    flex-basis: 100%;
    margin: 10px auto;
    
  }
}

@media(max-width: 768px){
  .project p{
    width: 100%;
  }
}
@media(max-width: 425px){
  h2{
    width: 100%;
    font-size: 35px;
    line-height: 50px;
    margin-bottom: 10px;
  }
  main p{
    font-size: 20px;
    padding: 10px;
    line-height: 30px;
  }
  .wrap div{
    width: 100%;
    padding: 0 20px;
    margin-bottom: 20px;
  }
  .wrap .wrapLeft img{
    width: 100px;
    height: 100px;
    margin: 10px 20px;
  }
  .wrap .wrapRight img{
    display: inline-block;
    width: 280px;
    margin-top: 20px;
  }
  .project h3{
    font-size: 30px;
    line-height: 30px;
    margin-top: 20px;
    padding-bottom: 10px;
  }
  .project img{
    width: 80%;
  }
  .about .pictures{
    margin-top: 10px;
  }
  .about .pictures .item{
    width: 90%;
    height: 23%;
    transition: 2s;
  }
  .about .pictures .item p{
    line-height: 30px;
  }
  .contact p{
    flex-basis: 100%;
    font-size: 16px;
    margin: 1px auto;
  }
}

